Segundo Commit - Curso de Angular - Aula 05 Filtros - Alterações no arquivo index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="lib/bootstrap/bootstrap.css">
 	<style>
 		.jumbotron {
-			width: 400px;
+			width: 600px;
 			text-align: center;
 			margin-top: 20px;
 			margin-left: auto;
@@ -56,6 +56,10 @@
 					return contato.selecionado;
 				}); 
 			};
+			$scope.ordenarPor = function (campo) {
+				$scope.criterioDeOrdenacao = campo;
+				$scope.direcaoDaOrdenacao = !$scope.direcaoDaOrdenacao; 
+			};
 		});
 	</script>
 </head>
@@ -63,20 +67,21 @@
 	<div class="jumbotron" >
 		<h4 ng-bind="app"></h4>
 		<!--{{contatos}}-->
+		<input type="text" class="form-control" ng-model="criterioDeBusca" placeholder="O que você está buscando?">
 		<table ng-show="contatos.length > 0" class="table table-striped">
 			<tr>
 				<th></th>
-				<th>Nome</th>
-				<th>Telefone</th>
+				<th><a href="" ng-click="ordenarPor('nome')">Nome</a></th>
+				<th><a href="" ng-click="ordenarPor('telefone')">Telefone</a></th>
 				<th>Operadora</th>
-				<th></th>
+				<th>Data</th>
 			</tr>
-			<tr ng-class="{'selecionado negrito': contato.selecionado}" ng-repeat="contato in contatos">
+			<tr ng-class="{'selecionado negrito': contato.selecionado}" ng-repeat="contato in contatos | filter:{nome: criterioDeBusca} | orderBy:criterioDeOrdenacao:direcaoDaOrdenacao">
 				<td><input type="checkbox" ng-model="contato.selecionado" /></td>
 				<td>{{contato.nome | uppercase}}</td>
 				<td>{{contato.telefone}}</td>
 				<td>{{contato.operadora.nome | lowercase}}</td>
-				<td><div style="width: 10px; height: 10px;" ng-style="{'background-color': contato.cor}"> </div></td>
+				<td>{{contato.data | date:'dd/MM/yyyy HH:mm'}}</td>
 			</tr>			
 		</table>
 		<hr />
@@ -88,7 +93,7 @@
 			<input class="form-control" type="text" ng-model="contato.telefone" name="telefone" placeholder="Telefone" ng-required="true" ng-pattern="/^\d{4,5}-\d{4}$/" />
 			<!--{{nome}}
 			{{telefone}}-->
-			<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras " >
+			<select class="form-control" ng-model="contato.operadora" ng-options="operadora.nome group by operadora.categoria for operadora in operadoras | orderBy:'nome'" >
 				<option value="" >Selecione uma operadora</option>
 			</select>
 		</form>
